[package]
name = "leas"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["bool", "float", "int", "sys", "uint", "vec"]
bool = []
float = []
int = []
sys = []
uint = []
vec = ["uint"]
