[package]
name = "leas"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["bool", "float", "int", "str", "iter", "sys", "uint", "vec"]
bool = []
float = []
int = []
str = []
iter = ["bool", "sys", "uint"]
sys = []
uint = []
vec = ["uint"]
