[package]
name = "leas"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"], optional = true }
toml = { version = "0.8.12", optional = true }


[features]
default = [
    "bool",
    "float",
    "int",
    "str",
    "iter",
    "sys",
    "toml_c",
    "uint",
    "vec",
]
bool = []
float = []
int = []
str = []
iter = ["bool", "sys", "uint"]
sys = []
toml_c = ["serde", "toml"]
uint = []
vec = ["uint"]
serde = ["dep:serde"]
toml = ["dep:toml"]
